Apply wrap to correct class

--- a/styles/notifications.less
+++ b/styles/notifications.less
@@ -181,7 +181,7 @@ atom-notification {
       }
     }
 
-    .detail-container {
+    .detail-content {
       .line {
         white-space: pre-wrap;
       }
